<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="finalproject_nutritionrecommendersystem.csun.personalnutritionrecommendersystem.MainActivity"
    tools:showIn="@layout/app_bar_main">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/Greeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Display2"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/quote_of_the_day"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Display2"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/either_you_run_the_day_or_the_day_runs_you"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Display1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorTextHint"
            android:onClick="onClick"
            android:text="@string/add_item" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/remaining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textremaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/remaining"
                android:textAppearance="@android:style/TextAppearance.Material.Display2" />
        </android.support.design.widget.TextInputLayout>
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/calories"
                android:padding="2.7dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView

                android:id="@+id/remainingCal"
                android:gravity="end"
                android:padding="2.7dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/proteins"
                android:padding="2.7dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/remainingPro"
                android:gravity="end"
                android:padding="2.7dip"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="Fat"
                    android:padding="2.7dip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/remainingFat"
                    android:gravity="end"
                    android:padding="2.7dip"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/fiber"
                android:padding="2.7dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/remainingfiber"
                android:gravity="end"
                android:padding="2.7dip"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/sugar"
                    android:padding="2.7dip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/remainingsugar"
                    android:gravity="end"
                    android:padding="2.7dip"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/sodium"
                    android:padding="2.7dip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/remainingsodium"
                    android:gravity="end"
                    android:padding="2.7dip"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/carb"
                    android:padding="2.7dip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/remainingcarb"
                    android:gravity="end"
                    android:padding="2.7dip"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/nextView"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="350dp"
            android:background="@color/colorTextHint"
            android:onClick="onClick"
            android:text="View" />
    </android.support.v7.widget.LinearLayoutCompat>


</android.support.v4.widget.NestedScrollView>
